src/objects/ERPIntegrationUploadResult__c.object
<CustomObject>
    <fields>
        <fullName>DataFlowName__c</fullName>
        <label>Data Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutionID__c</fullName>
        <label>Execution ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UploadResultURI__c</fullName>
        <externalId>true</externalId>
        <label>Upload Result Unique Record Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ERP Integration Upload Result</label>
    <nameField>
        <displayFormat>IUR-{00000000}</displayFormat>
        <label>ERP Integration Upload Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Integration Upload Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>